
syntax = "proto3";

package org.platon.p2p.proto.common;


option java_multiple_files = true;
option java_package = "org.platon.p2p.proto.common";
option java_outer_classname = "CommonProtos";

message RoutableID {
    enum DestinationType {
        NODEIDTYPE = 0;
        RESOURCEIDTYPE = 1;
        OPAQUEIDTYPE = 2;
    }

    DestinationType type = 1;
    bytes id = 2;
}

message NodeID {
    bytes id = 1;


    string endpoint = 2;

    string relay = 3;


    bytes pubKey = 4;
}

message ResourceID {
    bytes id = 1;
}

message OpaqueID {
    bytes id = 1;
}


